# FlappyBird

./: .gitignore  CMakeLists.txt  FlappyBird.pro  birditem.cpp  birditem.h  fishitem.cpp  fishitem.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  pillariteam.cpp  pillariteam.h  pillaritem.cpp  pillaritem.h  resource.qrc  saves.txt  savesfile.cpp  savesfile.h  scene.cpp  scene.h  score.cpp  score.h  score.ui  widget.cpp  widget.h  widget.ui
